added picture, ammended css style sheet and header to link to it

--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 
 <!DOCTYPE html>
+<html>
+	<head>
+	<link  rel = "stylesheet"  href = "mystyle.css">
+	<title> My Website </title>
+	</head>
 
 
-<body style="background-color:#0c1a27;">
+	<body>
+	<h1 > SPACE</h1>
+	<h2 > CRAZY THINGS</h2>
 
+	<p>It's extremely scary.</p>
 
-<h1 >SPACE</h1>
-<h2 >CRAZY THINGS</h2>
+	<p>Some things are very important to know about space.</p>
 
-<p>It's extremely scary.</p>
+	<p>It's Extremely Vast.</p>
 
-<p>Some things are very important to know about space.</p>
+	<img src="Ghostbusters-2016-Movie-Wallpaper.jpg"alt="holtzmann" width="104" height="142">
+	</body>
 
-<p>It's Extremely Vast.</p>
-
-<img src="Ghostbusters-2016-Movie-Wallpaper.jpg"alt="holtzmann" width="104" height="142">
-
-</body>
-
+</html>
