--- a/index.html
+++ b/index.html
@@ -4,20 +4,36 @@
 	<head>
 	<link  rel = "stylesheet"  href = "mystyle.css">
 	<title> My Website </title>
+	<script type="text/javascript" src="function.js"></script>
 	</head>
 
 
 	<body>
 	<h1 > SPACE</h1>
-	<h2 > CRAZY THINGS</h2>
+	<h2 > It's pretty cool</h2>
+
+	<h3>Some things are very important to know about space.</h3>
+
+
+	<button onclick="myFunction()"> Wanna go to space? </button>
 
 	<p>It's extremely scary.</p>
-
-	<p>Some things are very important to know about space.</p>
-
 	<p>It's Extremely Vast.</p>
+	<p>It's the next place for humans to explore.</p>
+	<p>But in order for exploration, we have to learn all that we can about space</p>
 
-	<img src="Ghostbusters-2016-Movie-Wallpaper.jpg" alt="holtzmann" width="104" height="142">
+	<img src="bluephase.png" width="540" height="405">
+
+	<p> When a star looks blue it means it's coming towards the earth. But in the majiority of cases the 'incoming' stars will burn out before they can get to us or humans are gone before they arrive.</p>
+
+	<img src="ufoyes.png" width="300" height="300">
+
+	<p> Statistically there are aliens. </p>
+
+	<img src="coolgif1.gif" width="100" height="100">
+	<img src="coolgif2.gif" width="100" height="100">
+	<img src="coolgif2.gif" width="100" height="100">
+
 	</body>
 
 </html>
