--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
 	<p> Statistically there are aliens. </p>
 
-	<img src="coolgif1.gif" width="100" height="100">
-	<img src="coolgif2.gif" width="100" height="100">
-	<img src="coolgif2.gif" width="100" height="100">
+	<img src="coolgif1.gif" width="100" height="100" />
+	<img src="coolgif2.gif" width="100" height="100" />
+	<img src="coolgif2.gif" width="100" height="100" />
 
 	</body>
 
