--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link  rel = "stylesheet"  href = "mystyle.css">
 	<title> My Website </title>
 	<script type="text/javascript" src="function.js"></script>
+	<utf-8/>
 	</head>
 
 
@@ -28,12 +29,16 @@
 
 	<img src="ufoyes.png" width="300" height="300">
 
-	<p> Statistically there are aliens. </p>
+	<p> Statistically there are aliens. We are not alone.</p>
 
 	<img src="coolgif1.gif" width="100" height="100" />
 	<img src="coolgif2.gif" width="100" height="100" />
-	<img src="coolgif2.gif" width="100" height="100" />
+	<img src="coolgif3.gif" width="100" height="100" />
 
+	<p>****************************************************************</p>
+
+
+	<h3 >EARTH</h3>
 	</body>
 
 </html>
