cosmic adress gifs

--- a/index.html
+++ b/index.html
@@ -10,37 +10,53 @@
 
 
 	<body>
-	<h1 > SPACE</h1>
-	<h2 > It's pretty cool</h2>
+	<h1 > OUTER SPACE</h1>
+	<h3 > It's pretty cool</h3>
 
-	<h3>Some things are very important to know about space.</h3>
-
-
-	<button onclick="myFunction()"> Wanna go to space? </button>
-
-	<p>It's extremely scary.</p>
-	<p>It's Extremely Vast.</p>
-	<p>It's the next place for humans to explore.</p>
-	<p>But in order for exploration, we have to learn all that we can about space</p>
-
-	<img src="bluephase.png" width="540" height="405">
-
-	<p> When a star looks blue it means it's coming towards the earth. But in the majiority of cases the 'incoming' stars will burn out before they can get to us or humans are gone before they arrive.</p>
-
-	<img src="ufoyes.png" width="300" height="300">
-
-	<p> Statistically there are aliens. We are not alone.</p>
-
-	<img src="coolgif1.gif" width="100" height="100" />
-	<img src="coolgif2.gif" width="100" height="100" />
-	<img src="coolgif3.gif" width="100" height="100" />
-
-	<p>****************************************************************</p>
+	<!--<h3> FACTS</h3> -->
 
 
-	<h3 >EARTH</h3>
+		<button onclick="myFunction()"> Wanna go to space? </button>
 
-	<img src="earthspin.gif" width="516.5" height="516.5" />
+		<p>It's extremely scary.</p>
+		<p>It's Extremely Vast.</p>
+		<p>It's the next place for humans to explore.</p>
+		<p>But in order for exploration, we have to learn all that we can about space.</p>
+
+	
+
+	<!--<p>****************************************************************</p> -->
+
+
+	<h4 >EARTH</h4>
+
+		<img src="earthspin.gif" width="344" height="344" />
+
+		<p> Our own blue planet is pretty cool.</p>
+
+		<p> We are a Planet in the Solar System, which is part of the Milky Way Galaxy, which is part of our Local Group, which is in the Virgo Supercluster in Laniakea.</p>
+
+		<p> Our closest neighbor </p>
+
+	<h6> THE MOON </h6>
+
+		<img src="animationmoonearth.gif" width="350" height="350">
+
+
+	<!--<p>****************************************************************</p> -->
+
+	<h5> What's Out There</h5>
+		<img src="bluephase.png" width="540" height="405">
+
+		<p> When a star looks blue it means it's coming towards the earth. But in the majiority of cases the 'incoming' stars will burn out before they can get to us or humans are gone before they arrive.</p>
+
+		<img src="ufoyes.png" width="300" height="300">
+
+		<p> Statistically there are aliens. We are not alone.</p>
+
+		<img src="coolgif1.gif" width="100" height="100" />
+		<img src="coolgif2.gif" width="100" height="100" />
+		<img src="coolgif3.gif" width="100" height="100" />
 	</body>
 
 </html>
