cosmic adress gifs

--- a/index.html
+++ b/index.html
@@ -34,7 +34,18 @@
 
 		<p> Our own blue planet is pretty cool.</p>
 
-		<p> We are a Planet in the Solar System, which is part of the Milky Way Galaxy, which is part of our Local Group, which is in the Virgo Supercluster in Laniakea.</p>
+		<h7> We are a Planet in </h7>
+		<p> </p>
+
+		<img src="whereweare1.gif" width="500" height="75" />
+		<p> which is at the outer tip of</p>
+		<img src="whereweare2.gif" width="500" height="75" />
+		<p> that's in our</p>
+		<img src="whereweare3.gif" width="500" height="75" />
+		<p> which is part of the</p>
+		<img src="whereweare4.gif" width="500" height="75" />
+
+
 
 		<p> Our closest neighbor </p>
 
