lunar eclipse gif added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<h1 > OUTER SPACE</h1>
 	<h3 > It's pretty cool</h3>
 
-	<!--<h3> FACTS</h3> -->
+	
 
 
 		<button onclick="myFunction()"> Wanna go to space? </button>
@@ -30,11 +30,16 @@
 
 	<h4 >EARTH</h4>
 
-		<img src="earthspin.gif" width="344" height="344" />
+		<img src="earthspin.gif" width="83" height="83" border=0px/>
+		<img src="earthspin.gif" width="167" height="167" border=0px/>
+		<img src="earthspin.gif" width="344" height="344" border=0px/>
+		<img src="earthspin.gif" width="167" height="167" border=0px/>
+		<img src="earthspin.gif" width="83" height="83" border=0px/>
 
 		<p> Our own blue planet is pretty cool.</p>
 
-		<h7> We are a Planet in </h7>
+		<h7> We Are A Planet In The</h7>
+
 		<p> </p>
 
 		<img src="whereweare1.gif" width="500" height="75" />
@@ -51,7 +56,16 @@
 
 	<h6> THE MOON </h6>
 
+		<img src="sun-moon-earth-orbit-animation.gif" width="350" height="350">
 		<img src="animationmoonearth.gif" width="350" height="350">
+		<img src="sun-moon-earth-orbit-animation.gif" width="350" height="350">
+
+		<p> The major effect of the moon on earth is that the oribtal pull makes the fall and rise of the tides. </p>
+
+		<p> Lunar Eclipse</p>
+
+
+
 
 
 	<!--<p>****************************************************************</p> -->
