--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 	<link  rel = "stylesheet"  href = "mystyle.css">
+	<link  rel = "maps"  href = "mapsapi.html">
 	<title> My Website </title>
 	<script type="text/javascript" src="function.js"></script>
 	<utf-8/>
@@ -32,15 +33,18 @@
 
 		<img src="earthspin.gif" width="83" height="83" border=0px/>
 		<img src="earthspin.gif" width="167" height="167" border=0px/>
-		<img src="earthspin.gif" width="344" height="344" border=0px/>
+		<a href = "http://www.ustream.tv/channel/iss-hdev-payload">
+			<img src="earthspin.gif" width="344" height="344" border=0px/>
+		</a>
 		<img src="earthspin.gif" width="167" height="167" border=0px/>
 		<img src="earthspin.gif" width="83" height="83" border=0px/>
 
 		<p> Our own blue planet is pretty cool.</p>
 
-		<h7> We Are A Planet In The</h7>
+	<h7> Our cosmic adress </h7>
 
 		<p> </p>
+		<p>We Are A Planet In The</p>
 
 		<img src="whereweare1.gif" width="500" height="75" />
 		<p> which is at the outer tip of</p>
@@ -52,7 +56,7 @@
 
 
 
-		<p> Our closest neighbor </p>
+		<p>  </p>
 
 	<h6> THE MOON </h6>
 
@@ -62,15 +66,17 @@
 
 		<p> The major effect of the moon on earth is that the oribtal pull makes the fall and rise of the tides. </p>
 
-		<p> Lunar Eclipse</p>
-
-
+		<h8> Lunar Eclipse</h8>
+		<p> </p>
+		<img src="lunareclipse.gif" width="600" height="337.5">
+		
+		<p> Lunar eclipses occur when the Earth is between the Sun and Moon, which causes a shadow to cover the moon and can sometimes makes the Moon red.</p>
 
 
 
 	<!--<p>****************************************************************</p> -->
 
-	<h5> What's Out There</h5>
+	<h5> WHAT'S OUT THERE</h5>
 		<img src="bluephase.png" width="540" height="405">
 
 		<p> When a star looks blue it means it's coming towards the earth. But in the majiority of cases the 'incoming' stars will burn out before they can get to us or humans are gone before they arrive.</p>
@@ -79,6 +85,8 @@
 
 		<p> Statistically there are aliens. We are not alone.</p>
 
+		<img src="coolgif3.gif" width="100" height="100" />
+		<img src="coolgif2.gif" width="100" height="100" />
 		<img src="coolgif1.gif" width="100" height="100" />
 		<img src="coolgif2.gif" width="100" height="100" />
 		<img src="coolgif3.gif" width="100" height="100" />
