getting the link to work

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link  rel = "maps"  href = "mapsapi.html">
 	<title> My Website </title>
 	<script type="text/javascript" src="function.js"></script>
+	<script type="text/javascript" src="mindBlown.js"></script>
 	<utf-8/>
 	</head>
 
@@ -33,15 +34,15 @@
 
 		<img src="earthspin.gif" width="83" height="83" border=0px/>
 		<img src="earthspin.gif" width="167" height="167" border=0px/>
-		<a href = "http://www.ustream.tv/channel/iss-hdev-payload">
-			<img src="earthspin.gif" width="344" height="344" border=0px/>
-		</a>
+			<a href = "https://www.youtube.com/watch?v=njCDZWTI-xg">
+				<img src="earthspin.gif" width="344" height="344" border=0px/>
+			</a>
 		<img src="earthspin.gif" width="167" height="167" border=0px/>
 		<img src="earthspin.gif" width="83" height="83" border=0px/>
 
 		<p> Our own blue planet is pretty cool.</p>
 
-	<h7> Our cosmic adress </h7>
+	<h7> Our Cosmic Adress </h7>
 
 		<p> </p>
 		<p>We Are A Planet In The</p>
@@ -54,6 +55,8 @@
 		<p> which is part of the</p>
 		<img src="whereweare4.gif" width="500" height="75" />
 
+<p> </p>
+	<button onclick="mindBlown()"> We are so tiny. </button>
 
 
 		<p>  </p>
